header gap fix

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,8 +14,7 @@
   font-weight: bold;
   color: black;
   text-decoration: none;
-  gap:2vh;
-  margin-right: 10vh;
+  margin-right: 5vh;
   
 }
 .header-left h3{
